--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:ios-debug": "detox build -c ios.sim.debug",
     "build:ios-release": "detox build -c ios.sim.release",
     "test:android-debug": "detox test -c android.emu.debug -l verbose",
-    "test:android-release": "detox test -c android.emu.release -l verbose",
+    "test:android-release": "detox test -c android.emu.release -l trace",
     "test:ios-debug": "detox test -c ios.sim.debug -l verbose",
     "test:ios-release": "detox test -c ios.sim.release -l verbose",
     "test:ios-none": "detox test -c ios.none -l verbose",
@@ -22,19 +22,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "17.0.2",
-    "react-native": "0.66.4"
+    "react": "18.2.0",
+    "react-native": "0.70.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
-    "detox": "^19.4.2",
-    "eslint": "7.14.0",
+    "detox": "^20.1.0",
+    "eslint": "7.32.0",
     "jest": "^27.4.7",
-    "metro-react-native-babel-preset": "^0.66.2",
-    "react-test-renderer": "17.0.2"
+    "metro-react-native-babel-preset": "^0.73.6",
+    "react-test-renderer": "18.2.0"
   },
   "jest": {
     "preset": "react-native"
